Tue Dec 19 14:18:53 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* gsloscillator.c: Take transpose factor into account for table
	lookups when the oscillator frequency is constant. Fixes #387364.

Tue Dec 19 02:10:33 2006  Tim Janik  <timj@gtk.org>

	* bsesong.[hc]: keep a flag around to detect the first sequencer underrun,
	reset the flag when prepared.

	* bsesequencer.cc (bse_sequencer_thread_main): always warn about 
	sequencer underruns, regardles of debugging state.

Mon Dec 18 20:14:34 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bsebiquadfilter.c:
	* bseconstant.c:
	* bsestandardosc.c:
	* bseladspamodule.c: Spelling fix: the unit for frequencies is spelled
	"Hertz" (not "Herz").

Sun Dec 17 20:58:40 2006  Tim Janik  <timj@gtk.org>

	* bsestandardosc.c (bse_standard_osc_update_modules): added missing 
	update of the transpose factor to update_modules(), fixes #386862.

Thu Dec 14 23:07:16 2006  Tim Janik  <timj@gtk.org>

	* gslcommon.c (gsl_error_from_errno): special case ENODATA, which is not
	available on GNU/kFreeBSD, reported by Petr Salinger <Petr.Salinger@seznam.cz>.

	* gsldatahandle-vorbis.c (gsl_vorbis1_handle_read): use EIO in unclear
	error cases, because GNU/kFreeBSD lacks ENODATA.

Mon Dec 11 01:13:00 2006  Tim Janik  <timj@gtk.org>

	* tests/filtertest.cc (generic_filter_tests): added missing stopband
	damping check for LOWPASS filters, caught by Stefan.

Wed Dec 13 23:55:15 2006  Tim Janik  <timj@gtk.org>

	* bseenginemaster.c (master_process_locked_node): set buffer start 
	fragments to zero for nodes that are partially suspended and have
	pending probe jobs, so probes don't contain outdated junk data.

Wed Dec 13 21:30:39 2006  Tim Janik  <timj@gtk.org>

	* bseenginemaster.c (master_take_probes): fixup ostreams[].value 
	pointers before returning a probe, since those may have been altered
	by process() routines.

	* bseprobe.cc: added debugging field and a few assertions.

Tue Dec 12 08:50:45 2006  Tim Janik  <timj@gtk.org>
